--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
 requires-python = ">=3.11"
 dependencies = [
     "streamlit==1.22.0",
+    "requests==2.31.0",
 ]
 
 [project.optional-dependencies]
