--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dev = [
   "isort==5.12.0",
   "mypy==1.3.0",
   "ruff==0.0.269",
-  "types-requests-2.31.0.1",
+  "types-requests==2.31.0.1",
 ]
 
 [project.urls]
