--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,9 @@ classifiers = [
 ]
 requires-python = ">=3.11"
 dependencies = [
-    "streamlit==1.22.0",
+    "streamlit==1.23.1",
     "requests==2.31.0",
+    "pandas==2.0.2",
 ]
 
 [project.optional-dependencies]
