Add correlations TODO

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "streamlit==1.23.1",
     "requests==2.31.0",
     "pandas==2.0.2",
+    "seaborn==0.12.2",
+    "matplotlib==3.7.1",
 ]
 
 [project.optional-dependencies]
