--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
 # up-to-date dependencies as of 5/24/2023
 dev = [
   "pytest==7.3.1",
+  "pytest-mock==3.11.1",
   "black==23.3.0",
   "isort==5.12.0",
   "mypy==1.3.0",
