--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "cobp"
@@ -17,25 +17,12 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 requires-python = ">=3.11"
-dependencies = [
-    "streamlit==1.23.1",
-    "requests==2.31.0",
-    "pandas==2.0.2",
-    "scipy==1.10.1"
-]
 
-[project.optional-dependencies]
-# up-to-date dependencies as of 5/24/2023
-dev = [
-  "pytest==7.3.1",
-  "pytest-mock==3.11.1",
-  "black==23.3.0",
-  "isort==5.12.0",
-  "mypy==1.3.0",
-  "ruff==0.0.269",
-  "types-requests==2.31.0.1",
-  "coverage==7.2.7",
-]
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
+
+[tool.setuptools.dynamic.optional-dependencies]
+dependencies = {file = ["requirements_dev.txt"]}
 
 [project.urls]
 "Homepage" = "https://github.com/rozelie/baseball_obp_and_cobp"
