--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
 
 [project]
 name = "cobp"
@@ -17,11 +17,15 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 requires-python = ">=3.11"
-
-[tool.setuptools.dynamic]
-dependencies = {file = ["requirements.txt"]}
+dependencies = [
+    "streamlit==1.23.1",
+    "requests==2.31.0",
+    "pandas==2.0.2",
+    "scipy==1.10.1"
+]
 
 [project.optional-dependencies]
+# up-to-date dependencies as of 5/24/2023
 dev = [
   "pytest==7.3.1",
   "pytest-mock==3.11.1",
