--- a/.github/workflows/build_and_publish_docker_image.yaml
+++ b/.github/workflows/build_and_publish_docker_image.yaml
@@ -42,6 +42,7 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
           AWS_REGION: us-east-1
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG 
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
