--- a/.github/workflows/build_and_publish_docker_image.yaml
+++ b/.github/workflows/build_and_publish_docker_image.yaml
@@ -27,6 +27,8 @@ jobs:
     needs: lint_and_test
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
@@ -42,8 +44,6 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
           AWS_REGION: us-east-1
         run: |
-          ls
-          pwd
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG 
