--- a/.gitignore
+++ b/.gitignore
@@ -579,3 +579,11 @@ venv
 
 # ruff
 .ruff_cache
+
+.env
+
+# terraform
+terraform/.terraform.lock.hcl
+terraform/.terraform
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
