update gitignore with local tfstate file

--- a/.gitignore
+++ b/.gitignore
@@ -584,6 +584,7 @@ venv
 
 # terraform
 terraform/.terraform.lock.hcl
+terraform/.terraform.tfstate.lock.info
 terraform/.terraform
 terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
