--- a/.github/workflows/build_and_publish_docker_image.yaml
+++ b/.github/workflows/build_and_publish_docker_image.yaml
@@ -29,6 +29,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Unset AWS_SESSION_TOKEN # https://github.com/aws-actions/configure-aws-credentials/issues/340
+        run: |
+          unset AWS_SESSION_TOKEN
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
