--- a/.github/workflows/build_and_publish_docker_image.yaml
+++ b/.github/workflows/build_and_publish_docker_image.yaml
@@ -29,17 +29,26 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Unset AWS_SESSION_TOKEN # https://github.com/aws-actions/configure-aws-credentials/issues/340
-        run: |
-          unset AWS_SESSION_TOKEN
+      - name: Configure AWS Credentials again with IAM user # https://github.com/aws-actions/configure-aws-credentials/issues/340#issuecomment-1382321767
+        uses: aws-actions/configure-aws-credentials@v1
+        env:
+          AWS_DEFAULT_REGION:
+          AWS_REGION:
+          AWS_ACCESS_KEY_ID:
+          AWS_SECRET_ACCESS_KEY:
+          AWS_SESSION_TOKEN:
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: us-east-1
+#        env:
+#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          AWS_REGION: us-east-1
 
       - name: Build, tag, and push image to Amazon ECR
         env:
