--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,9 @@ dependencies = [
     "streamlit==1.27.2",
     "requests==2.31.0",
     "pandas==2.1.1",
-    "scipy==1.10.1"
+    "scipy==1.10.1",
+    "python-dotenv==1.0.0",
+    "pydantic-settings==2.1.0",
 ]
 
 [project.optional-dependencies]
