--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "scipy==1.10.1",
     "python-dotenv==1.0.0",
     "pydantic-settings==2.1.0",
+    "ordered_enum==0.0.8",
 ]
 
 [project.optional-dependencies]
