--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "python-dotenv==1.0.0",
     "pydantic-settings==2.1.0",
     "ordered_enum==0.0.8",
+    "beautifulsoup4==4.12.2",
 ]
 
 [project.optional-dependencies]
