--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "pydantic-settings==2.1.0",
     "ordered_enum==0.0.8",
     "beautifulsoup4==4.12.2",
+    "fuzzywuzzy==0.18.0",
+    "python-Levenshtein==0.23.0", # for fast fuzzy matching
 ]
 
 [project.optional-dependencies]
