--- a/.github/workflows/lint_and_test.yaml
+++ b/.github/workflows/lint_and_test.yaml
@@ -18,7 +18,7 @@ jobs:
       run: make setup
 
     - name: Run linters
-      run: make lint
+      run: ls && make lint
 
     - name: Run tests
       run: make test
