--- a/.github/workflows/lint_and_test.yaml
+++ b/.github/workflows/lint_and_test.yaml
@@ -14,11 +14,11 @@ jobs:
       with:
         python-version: 3.11
 
-    - name: Install module in venv
-      run: make setup
+    - name: Install module and dependencies
+      run: python -m pip install . && python -m pip install .[dev]
 
     - name: Run linters
-      run: ls && make lint
+      run: python -m ruff cobp && python -m mypy cobp
 
     - name: Run tests
-      run: make test
+      run: python -m pytest tests
