--- a/.github/workflows/lint_and_test.yaml
+++ b/.github/workflows/lint_and_test.yaml
@@ -15,10 +15,10 @@ jobs:
         python-version: 3.11
 
     - name: Install module and dependencies
-      run: python -m pip install . && python -m pip install .[dev]
+      run: pip install . && pip install .[dev]
 
     - name: Run linters
-      run: ls && python -m ruff cobp && python -m mypy -m cobp
+      run: ruff cobp && mypy cobp
 
     - name: Run tests
-      run: python -m pytest tests
+      run: pytest tests
