Revert GH Action changes, no idea why this stopped working and why mypy is following random imports

--- a/.github/workflows/lint_and_test.yaml
+++ b/.github/workflows/lint_and_test.yaml
@@ -14,12 +14,11 @@ jobs:
       with:
         python-version: 3.11
 
-    # uninstall cobp so mypy doesn't traverse site-packages for some reason (I think import following)
     - name: Install module and dependencies
-      run: pip install . && pip install .[dev] && pip uninstall -y cobp
+      run: make setup
 
     - name: Run linters
-      run: ruff cobp && mypy cobp
+      run: make lint
 
     - name: Run tests
-      run: pytest tests
+      run: make test
